# AnimeTest

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CourseLab.sln  CourseLab.vcxproj  CourseLab.vcxproj.filters  README.md  imgui.ini  main.cpp  main.h
include/: objLoader.cpp  objLoader.h
include/glad/: glad.c  glad.h
include/imGui/ext/: imfilebrowser.h
lib/: CMakeLists.txt  assimp-vc142-mt.exp
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/stb/: CMakeLists.txt
res/shader/: fragment.shader  fragment2.shader  fragment3.shader  vertex.shader
src/: CMakeLists.txt  Source.cpp  buffer.cpp  buffer.h  callbacks.h  layout.h  main.cpp  main.h  objects.h  renderer.h  scene.cpp  scene.h  shader.cpp  shader.h  vertexArray.cpp  vertexArray.h  window.cpp  window.h
src/animation/: animation.h
src/dataProcessing/: fileObject.h  parser.h
src/dataStructs/: texture.h
src/gui/: gui.cpp  gui.h
src/objects/: camera.cpp  camera.h  interfaces.cpp  interfaces.h  light.cpp  light.h  model.cpp  model.h  renderer.cpp  renderer.h  timeline.cpp  timeline.h
